--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+      body { padding: 0px; margin: 0px; }
+    </style>
   </head>
   <body>
     <div id="example-view"></div>
