--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="example-view"></div>
-    <script src="https://unpkg.com/react/dist/react.min.js"></script>
-    <script src="https://unpkg.com/react/dist/react-dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.0/react.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.0/react-dom.min.js"></script>
     <script src='./bundle.js'></script>
   </body>
 </html>
